# django-wiki

./: .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  Dockerfile  HISTORY.rst  MANIFEST  MANIFEST.in  Makefile  README.md  README.rst  SUPPORT.rst  TODO.md  TODO.rst  build-less.sh  build-sdist.sh  custom_user_auth_south_refactor.py  docker-compose.yml  openedx.yaml  pyproject.toml  pytest.ini  requirements.txt  requirements_readthedocs.txt  runtests.py  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: dependabot.yml  issue_template.md
.github/DISCUSSION_TEMPLATE/: bug-report.yml  bug.yml  feature-request.yml  ideas.yml
.github/ISSUE_TEMPLATE/: ask-a-question.md  bug_report.md  config.yml  issue_template.md
.github/ISSUE_TEMPLATES/: bug_report.md
.travis/: requirements.txt  requirements_1.4.txt  requirements_1.5.txt  requirements_1.6.txt  requirements_1.7.txt
.tx/: config
django_notify/: README  README.md  __init__.py  admin.py  decorators.py  models.py  settings.py  urls.py  views.py
django_notify/management/commands/: notifymail.py  notifysendemails.py
django_notify/migrations/: 0001_initial.py  0002_auto__add_field_notification_occurrences.py  0003_auto__add_field_subscription_latest.py  0004_auto__chg_field_notification_url.py
django_notify/templates/emails/: notification_email_message.txt  notification_email_subject.txt
docs/: Makefile  build.sh  conf.py  customization.rst  faq.rst  history.rst  index.rst  installation.rst  known_issues.rst  plugins.rst  release_notes.rst  requirements_preinstall.txt  settings.rst  tips.rst  todo.rst
docs/development/: environment.rst  hatch.rst  index.rst  testing.rst  testproject.rst
docs/tips/: disqus.rst  faq.rst  index.rst  mediawiki.rst
requirements/: base.in  base.txt  constraints.txt  django.txt  docs.in  docs.txt  pip_tools.in  pip_tools.txt  test.in  test.txt  tox.in  tox.txt  travis.in  travis.txt
src/wiki/: __about__.py  __init__.py  admin.py  apps.py  checks.py  compat.py  decorators.py  forms.py  forms_account_handling.py  managers.py  sites.py  urls.py
src/wiki/conf/: settings.py
src/wiki/core/: compat.py  diff.py  exceptions.py  http.py  paginator.py  permissions.py  utils.py  version.py
src/wiki/editors/: __init__.py  base.py  markitup.py  martor.py  simplemde.py
src/wiki/locale/: pt
src/wiki/migrations/: 0001_initial.py  0002_urlpath_moved_from.py  0002_urlpath_moved_to.py  0003_auto_20200206_0327.py  0003_mptt_upgrade.py  0003_on_delete_set_null.py
src/wiki/models/: __init__.py  article.py  pluginbase.py  urlpath.py
src/wiki/templatetags/: wiki_tags.py
src/wiki/views/: accounts.py  article.py  deleted_list.py  mixins.py
testproject/: README.md  django_notify  manage.py  prepopulated.db  pytest.ini  vmanage.py  wiki
testproject/db/: prepopulated.db
testproject/testproject/: .gitignore  middleware.py  settings.py  urls.py  views.py  wsgi.py
tests/: __init__.py  base.py  settings.py
tests/core/: test_accounts.py  test_basic.py  test_checks.py  test_commands.py  test_editor.py  test_forms.py  test_managers.py  test_markdown.py  test_markdown_plugins.py  test_models.py  test_paginator.py  test_signals.py  test_sites.py  test_template_filters.py  test_template_tags.py  test_urls.py  test_utils.py  test_views.py
tests/testdata/: models.py  urls.py
wiki/: TODO  __init__.py  admin.py  apps.py  compat.py  decorators.py  editors.py  forms.py  managers.py  middleware.py  search_indexes.py  tests.py  urls.py  views.py
wiki/conf/: settings.py
wiki/core/: __init__.py  compat.py  diff.py  exceptions.py  extensions.py  http.py  permissions.py  plugins_load.py  plugins_registry.py  processors.py  utils.py  version.py
wiki/editors/: __init__.py  base.py  markitup.py
wiki/migrations/: 0001_initial.py  0002_auto__add_field_articleplugin_created.py  0002_remove_article_subscription.py  0003_auto__add_field_urlpath_article.py  0003_ip_address_conv.py  0004_increase_slug_size.py  0004_populate_urlpath__article.py  0005_auto__chg_field_urlpath_article.py  0005_remove_attachments_and_images.py  0006_auto_20200110_1003.py  0006_auto__add_attachmentrevision__add_image__add_attachment.py  0007_auto__add_articlesubscription.py  0008_auto__add_simpleplugin__add_revisionpluginrevision__add_imagerevision_.py  0009_auto__add_field_imagerevision_width__add_field_imagerevision_height.py  0010_auto__chg_field_imagerevision_image.py  0011_auto__chg_field_imagerevision_width__chg_field_imagerevision_height.py  0012_auto__chg_field_attachmentrevision_user__chg_field_attachmentrevision_.py  0013_auto__chg_field_attachmentrevision_previous_revision__chg_field_revisi.py
wiki/models/: __init__.py  article.py  pluginbase.py  urlpath.py
wiki/plugins/: __init__.py
wiki/south_migrations/: 0001_initial.py  0002_auto__add_field_articleplugin_created.py  0003_auto__add_field_urlpath_article.py  0004_populate_urlpath__article.py  0005_auto__chg_field_urlpath_article.py  0006_auto__add_attachmentrevision__add_image__add_attachment.py  0007_auto__add_articlesubscription.py  0008_auto__add_simpleplugin__add_revisionpluginrevision__add_imagerevision_.py  0009_auto__add_field_imagerevision_width__add_field_imagerevision_height.py  0010_auto__chg_field_imagerevision_image.py  0011_auto__chg_field_imagerevision_width__chg_field_imagerevision_height.py  0012_auto__chg_field_attachmentrevision_user__chg_field_attachmentrevision_.py  0013_auto__chg_field_attachmentrevision_previous_revision__chg_field_revisi.py  0014_auto__del_attachmentrevision__del_image__del_imagerevision__del_attach.py
wiki/templatetags/: wiki_tags.py
wiki/tests/: __init__.py  base.py  settings.py  test_basic.py  test_commands.py  test_managers.py  test_markdown.py  test_markdown_plugins.py  test_models.py  test_template_filters.py  test_template_tags.py  test_urls.py  test_views.py
wiki/views/: accounts.py  admin_panel.py  article.py  deleted_list.py  mixins.py
(+567 files in other folders)
