[bdist_wheel]
universal = 0

[flake8]
ignore = E501
max-line-length = 160
max-complexity = 10
exclude = .svn,CVS,.bzr,.hg,.git,__pycache__,.tox,.eggs,*.egg,*/*migrations,testproject

[metadata]
description-file = README.rst

[aliases]
test=pytest

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 160
multi_line_output = 5
not_skip = __init__.py
skip = docs/conf.py
indent = 4
